refactor(rate-limiting): Improve rate limiting implementation
Updated RateLimitFilter and RateLimitProperties for better
handling of rate limits, including fallback mechanisms and
improved metrics.  Configuration simplified for easier
management.